# dataplotter

./: .env.example  .gitignore  AGENTS.md  README.md  cypress.config.ts  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
.github/workflows/: electron-build.yml
backend/app/: config.py  main.py
cypress/e2e/: app-and-linear-regression.cy.ts
cypress/support/: e2e.ts
docs/: README.md  high-level-design.md
docs/explanation/: design-decisions.md
docs/how-to-guides/: how-to-add-a-graph-type.md  how-to-add-an-analysis-type.md  how-to-add-an-llm-provider.md  how-to-build-electron-app.md  how-to-build-tauri-app.md  how-to-run-tests-and-lint.md  how-to-use-table-transformations.md
docs/llds/: analyses-and-engine.md  data-tables-and-formats.md  graphs-and-charts.md  project-and-workflows.md  transformations.md
docs/planning/: prism-clone.2026-03-06.md  sample-data.2026-03-06.md
docs/plans/: 2025-03-05-bayesian-by-default.md
docs/reference/: architecture.md  environment-variables.md  prism-file-formats.md  project-layout.md
docs/specs/: prism-clone-specs.md
docs/tutorials/: getting-started.md
electron/: main.cjs  preload.cjs
frontend/templates/: base.html
scripts/prism_guide_pages/: README.md  download_prism_guide.py
scripts/youtube_prism_transcripts/: README.md  fetch_prism_transcripts.py
src/: App.css  App.tsx  ErrorBoundary.tsx  index.css  jstat.d.ts  main.tsx  plotly-react.d.ts
src/charts/: adapter.ts
src/components/: AnalysisPanel.tsx  ChatPanel.tsx  ContingencyDataGrid.tsx  DataGrid.tsx  GraphView.tsx  GroupedDataGrid.tsx  LayoutView.tsx  NewTableDialog.tsx  PartsOfWholeDataGrid.tsx  SettingsModal.tsx  Sidebar.tsx  SurvivalDataGrid.tsx  TableView.tsx
src/data/: sampleColumn.ts  sampleContingency.ts  sampleDataIndex.test.ts  sampleDataIndex.ts  sampleGrouped.ts  samplePartsOfWhole.ts  sampleSurvival.ts  sampleXY.ts
src/hooks/: useAutoRunAnalyses.ts  useGridEdit.ts  useProjectSaveLoad.ts
src/lib/: effectiveTableData.test.ts  effectiveTableData.ts  equationEval.test.ts  equationEval.ts  exportProject.ts  importProject.test.ts  importProject.ts  projectSchema.ts  tableRegistry.test.ts  tableRegistry.ts  transformRegistry.ts
src/nl/: callLLM.ts  context.ts  orchestrator.ts  schemas.ts  tools.ts
src/store/: index.ts  (+3 more)
(+89 files in other folders)
